--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+<head><!-- ANÚNCIO (INÍCIO DO POST) -->
+<div style="margin:20px 0; text-align:center;">
+<script type="text/javascript">
+    atOptions = {
+        'key' : 'd7f9fd9b65051082e170401380571aac',
+        'format' : 'iframe',
+        'height' : 90,
+        'width' : 728,
+        'params' : {}
+    };
+</script>
+<script src="//www.highperformanceformat.com/d7f9fd9b65051082e170401380571aac/invoke.js" type="text/javascript"></script>
+</div>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>JOGA WILL</title>
