--- a/index.html
+++ b/index.html
@@ -141,5 +141,17 @@ footer {
 </div>
 
 <footer>© 2025 JOGA WILL — Todos os direitos reservados</footer>
-</body>
+</body><!-- ANÚNCIO (INÍCIO DO POST) -->
+<div style="margin:20px 0; text-align:center;">
+<script type="text/javascript">
+    atOptions = {
+        'key' : 'd7f9fd9b65051082e170401380571aac',
+        'format' : 'iframe',
+        'height' : 90,
+        'width' : 728,
+        'params' : {}
+    };
+</script>
+<script src="//www.highperformanceformat.com/d7f9fd9b65051082e170401380571aac/invoke.js" type="text/javascript"></script>
+</div>
 </html>
