--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ footer {
   <div class="grid">
 
     <div class="card" onclick="location.href='CATEGORIAS/jogos-mobile.html'">
-      <img src="CATEGORIAS/IMAGENS/jogosmobile-bg.jpg" />
+      <img src="https://i.ytimg.com/vi/1_WrqkJGKJE/maxresdefault.jpg" />
       <h3>JOGOS MOBILE</h3>
       <p style="padding: 0 12px 12px; opacity: .85;">Posts atualizados automaticamente.</p>
     </div>
