--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ footer {
   <nav>
     <ul>
       <li><a href="index.html">Início</a></li>
-      <li><a href="CATEGORIAS/jogos-mobile.html">Jogos Mobile</a></li>
+      <li><a href="/jogos-mobile.html">Jogos Mobile</a></li>
       <li><a href="CATEGORIAS/jogos-pc.html">Jogos PC</a></li>
       <li><a href="CATEGORIAS/addons-minecraft.html">Addons Minecraft</a></li>
       <li><a href="CATEGORIAS/produtos.html">Compras / Produtos</a></li>
@@ -143,3 +143,4 @@ footer {
 
 </body>
 </html>
+
