--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@ footer {
   <nav>
     <ul>
       <li><a href="index.html">Início</a></li>
-      <li><a href="CATEGORIAS/jogos-mobile.html">Jogos Mobile</a></li>
-      <li><a href="CATEGORIAS/jogos-pc.html">Jogos PC</a></li>
-      <li><a href="CATEGORIAS/addons-minecraft.html">Addons Minecraft</a></li>
-      <li><a href="CATEGORIAS/produtos.html">Compras / Produtos</a></li>
+      <li><a href="./jogos-mobile.html">Jogos Mobile</a></li>
+      <li><a href="./jogos-pc.html">Jogos PC</a></li>
+      <li><a href="./addons-minecraft.html">Addons Minecraft</a></li>
+      <li><a href="./produtos.html"">Compras / Produtos</a></li>
     </ul>
   </nav>
 </header>
@@ -109,25 +109,25 @@ footer {
 
   <div class="grid">
 
-    <div class="card" onclick="location.href='CATEGORIAS/jogos-mobile.html'">
+    <div class="card" onclick="location.href='./jogos-mobile.html'">
       <img src="https://i.ytimg.com/vi/1_WrqkJGKJE/maxresdefault.jpg" />
       <h3>JOGOS MOBILE</h3>
       <p style="padding: 0 12px 12px; opacity: .85;">Posts atualizados automaticamente.</p>
     </div>
 
-    <div class="card" onclick="location.href='CATEGORIAS/jogos-pc.html'">
+    <div class="card" onclick="location.href='./jogos-pc.html'">
       <img src="https://i.imgur.com/51D5GXl.jpeg" />
       <h3>JOGOS PC</h3>
       <p style="padding: 0 12px 12px; opacity: .85;">Lista de posts de jogos para computador.</p>
     </div>
 
-    <div class="card" onclick="location.href='CATEGORIAS/addons-minecraft.html'">
+    <div class="card" onclick="location.href='./addons-minecraft.html'">
       <img src="https://i.imgur.com/vvhFHgR.jpeg" />
       <h3>ADDONS MINECRAFT</h3>
       <p style="padding: 0 12px 12px; opacity: .85;">Addons e conteúdos para Minecraft.</p>
     </div>
 
-    <div class="card" onclick="location.href='CATEGORIAS/produtos.html'">
+    <div class="card" onclick="location.href='./produtos.html'">
       <img src="https://i.imgur.com/l1Wk8vR.jpeg" />
       <h3>COMPRAS / PRODUTOS</h3>
       <p style="padding: 0 12px 12px; opacity: .85;">Recomendações e análises.</p>
@@ -143,3 +143,4 @@ footer {
 
 </body>
 </html>
+
