--- a/CATEGORIAS/jogos-mobile.html
+++ b/CATEGORIAS/jogos-mobile.html
@@ -111,7 +111,10 @@ footer {
 <h1 style="     background:url('../IMAGENS/jogosmobile-bg.jpg');     background-size:cover;     background-position:center;     padding:45px 0;     border-radius:12px;     color:#ffd000;     text-shadow: 0 0 15px #000;     font-family:'Orbitron', sans-serif;     font-size:38px;     text-align:center;     margin:25px auto;     box-shadow:0 0 20px #00F7FF55; ">   Jogos Mobile </h1>
 <div id="posts-container"></div>
 <div id="lista"></div>
-<script src="../js/list-posts.js"></script>
-<script>loadPosts("../DATA/jogos-mobile.json")</script>
+<script src="../POSTS/js/list-posts-auto.js"></script>
+<script>
+  loadPostsAuto("site/POSTS/jogos-mobile");
+</script>
+
 <footer>© 2025 JOGA WILL — Todos os direitos reservados</footer>
 </body></html>
