--- a/CATEGORIAS/jogos-mobile.html
+++ b/CATEGORIAS/jogos-mobile.html
@@ -1,6 +1,10 @@
-<html><head>
+<html>
+<head>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-<style>header {
+<link rel="stylesheet" href="../css/style.css">
+
+<style>
+header {
   background: #0f1117;
   border-bottom: 3px solid #00F7FF;
   padding: 20px 0;
@@ -33,17 +37,20 @@ nav ul li a:hover {
   color: #00F7FF;
   text-shadow: 0 0 12px #00F7FF;
 }
+
 .container {
   max-width: 1150px;
   margin: 40px auto;
   padding: 20px;
 }
-.grid {
+
+.autogen-list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
   gap: 25px;
 }
-.card {
+
+.autogen-card {
   background: #12151c;
   border: 2px solid #00F7FF33;
   border-radius: 12px;
@@ -52,20 +59,21 @@ nav ul li a:hover {
   transition: 0.3s;
   cursor: pointer;
 }
-.card:hover {
+.autogen-card:hover {
   transform: scale(1.03);
   box-shadow: 0 0 15px #00F7FFaa;
 }
-.card img {
+.autogen-card img {
   width: 100%;
   height: 150px;
   object-fit: cover;
 }
-.card h3 {
+.autogen-card h3 {
   color: #ffd000;
   padding: 10px;
   text-align: center;
 }
+
 footer {
   text-align: center;
   padding: 25px;
@@ -74,30 +82,13 @@ footer {
   color: #bbb;
   border-top: 3px solid #00F7FF;
 }
-
-/* MOBILE FIX — COMPACT */
-@media (max-width: 600px) {
-  header h1 {
-    font-size: 32px !important;
-  }
-  nav ul {
-    flex-direction: column;
-    gap: 10px !important;
-  }
-  img {
-    max-width: 100% !important;
-    height: auto !important;
-  }
-  .grid {
-    grid-template-columns: 1fr !important;
-  }
-}
 </style>
-<link rel="stylesheet" href="../css/style.css"></head>
+</head>
+
 <body>
+
 <header>
   <h1>JOGA WILL</h1>
-<div id="posts-container"></div>
   <nav>
     <ul>
       <li><a href="../index.html">Início</a></li>
@@ -108,10 +99,33 @@ footer {
     </ul>
   </nav>
 </header>
-<h1 style="     background:url('../IMAGENS/jogosmobile-bg.jpg');     background-size:cover;     background-position:center;     padding:45px 0;     border-radius:12px;     color:#ffd000;     text-shadow: 0 0 15px #000;     font-family:'Orbitron', sans-serif;     font-size:38px;     text-align:center;     margin:25px auto;     box-shadow:0 0 20px #00F7FF55; ">   Jogos Mobile </h1>
-<div id="posts-container"></div>
-<div id="lista"></div>
-<script src="../js/list-posts.js"></script>
-<script>loadPosts("../DATA/jogos-mobile.json")</script>
+
+<h1 style="
+  background:url('../IMAGENS/jogosmobile-bg.jpg');
+  background-size:cover;
+  background-position:center;
+  padding:45px 0;
+  border-radius:12px;
+  color:#ffd000;
+  text-shadow: 0 0 15px #000;
+  font-family:'Orbitron', sans-serif;
+  font-size:38px;
+  text-align:center;
+  margin:25px auto;
+  box-shadow:0 0 20px #00F7FF55;
+">
+  Jogos Mobile
+</h1>
+
+<div class="container">
+    <!-- AQUI O AUTOGEN VAI CRIAR TUDO -->
+    <div id="jogos-mobile-list"></div>
+</div>
+
+<!-- SCRIPT NOVO (AutoGen) -->
+<script type="module" src="../autogen/autogen.js"></script>
+
 <footer>© 2025 JOGA WILL — Todos os direitos reservados</footer>
-</body></html>
+
+</body>
+</html>
