--- a/CATEGORIAS/produtos.html
+++ b/CATEGORIAS/produtos.html
@@ -1,103 +1,12 @@
-<html><head>
+<html>
+<head>
 <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-<style>header {
-  background: #0f1117;
-  border-bottom: 3px solid #00F7FF;
-  padding: 20px 0;
-  text-align: center;
-  box-shadow: 0 0 20px #00F7FF55;
-}
-header h1 {
-  font-family: "Orbitron", sans-serif;
-  font-size: 40px;
-  color: #00F7FF;
-  text-shadow: 0 0 15px #00F7FF, 0 0 30px #007c91;
-  letter-spacing: 3px;
-}
-nav ul {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  gap: 25px;
-  flex-wrap: wrap;
-  margin-top: 15px;
-}
-nav ul li a {
-  color: #ffd000;
-  font-weight: bold;
-  text-decoration: none;
-  font-size: 16px;
-  transition: 0.3s;
-}
-nav ul li a:hover {
-  color: #00F7FF;
-  text-shadow: 0 0 12px #00F7FF;
-}
-.container {
-  max-width: 1150px;
-  margin: 40px auto;
-  padding: 20px;
-}
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-  gap: 25px;
-}
-.card {
-  background: #12151c;
-  border: 2px solid #00F7FF33;
-  border-radius: 12px;
-  overflow: hidden;
-  box-shadow: 0 0 12px #00F7FF33;
-  transition: 0.3s;
-  cursor: pointer;
-}
-.card:hover {
-  transform: scale(1.03);
-  box-shadow: 0 0 15px #00F7FFaa;
-}
-.card img {
-  width: 100%;
-  height: 150px;
-  object-fit: cover;
-}
-.card h3 {
-  color: #ffd000;
-  padding: 10px;
-  text-align: center;
-}
-footer {
-  text-align: center;
-  padding: 25px;
-  background: #0f1117;
-  margin-top: 40px;
-  color: #bbb;
-  border-top: 3px solid #00F7FF;
-}
+<link rel="stylesheet" href="../css/style.css">
+</head>
 
-/* MOBILE FIX — COMPACT */
-@media (max-width: 600px) {
-  header h1 {
-    font-size: 32px !important;
-  }
-  nav ul {
-    flex-direction: column;
-    gap: 10px !important;
-  }
-  img {
-    max-width: 100% !important;
-    height: auto !important;
-  }
-  .grid {
-    grid-template-columns: 1fr !important;
-  }
-}
-</style>
-<link rel="stylesheet" href="../css/style.css"></head>
 <body>
 <header>
   <h1>JOGA WILL</h1>
-<div id="posts-container"></div>
   <nav>
     <ul>
       <li><a href="../index.html">Início</a></li>
@@ -108,10 +17,16 @@ footer {
     </ul>
   </nav>
 </header>
-<h1>Produtos</h1>
-<div id="posts-container"></div>
-<div id="lista"></div>
-<script src="../js/list-posts.js"></script>
-<script>loadPosts("../DATA/produtos.json")</script>
+
+<h1 class="categoria-banner">Produtos / Compras</h1>
+
+<div id="category-list" class="container grid"></div>
+
+<script type="module">
+  import { loadCategory } from "https://jogawill.github.io/site/autogen/autogen.js";
+  loadCategory("produtos");
+</script>
+
 <footer>© 2025 JOGA WILL — Todos os direitos reservados</footer>
-</body></html>
+</body>
+</html>
