--- a/CATEGORIAS/jogos-mobile.html
+++ b/CATEGORIAS/jogos-mobile.html
@@ -118,11 +118,11 @@ footer {
 </h1>
 
 <div class="container">
-    <!-- AQUI O AUTOGEN VAI CRIAR TUDO -->
+    <!-- AQUI O AUTOGEN INSERE OS POSTS AUTOMATICAMENTE -->
     <div id="jogos-mobile-list"></div>
 </div>
 
-<!-- SCRIPT NOVO (AutoGen) -->
+<!-- SCRIPT DO AUTOGEN (CARREGA A LISTA DO GITHUB AUTOMATICAMENTE) -->
 <script type="module" src="../autogen/autogen.js"></script>
 
 <footer>© 2025 JOGA WILL — Todos os direitos reservados</footer>
