--- a/CATEGORIAS/jogos-mobile.html
+++ b/CATEGORIAS/jogos-mobile.html
@@ -92,10 +92,10 @@ footer {
   <nav>
     <ul>
       <li><a href="../index.html">Início</a></li>
-      <li><a href="../CATEGORIAS/jogos-mobile.html">Jogos Mobile</a></li>
-      <li><a href="../CATEGORIAS/jogos-pc.html">Jogos PC</a></li>
-      <li><a href="../CATEGORIAS/addons-minecraft.html">Addons Minecraft</a></li>
-      <li><a href="../CATEGORIAS/produtos.html">Compras / Produtos</a></li>
+      <li><a href="./jogos-mobile.html">Jogos Mobile</a></li>
+      <li><a href="./jogos-pc.html">Jogos PC</a></li>
+      <li><a href="./addons-minecraft.html">Addons Minecraft</a></li>
+      <li><a href="./produtos.html">Compras / Produtos</a></li>
     </ul>
   </nav>
 </header>
@@ -118,11 +118,11 @@ footer {
 </h1>
 
 <div class="container">
-    <!-- AQUI O AUTOGEN INSERE OS POSTS AUTOMATICAMENTE -->
-    <div id="jogos-mobile-list"></div>
+    <!-- O AUTO-GERADOR INSERE AQUI -->
+    <div id="autogen-jogos-mobile" class="autogen-list"></div>
 </div>
 
-<!-- SCRIPT DO AUTOGEN (CARREGA A LISTA DO GITHUB AUTOMATICAMENTE) -->
+<!-- SCRIPT DO AUTOGEN -->
 <script type="module" src="../autogen/autogen.js"></script>
 
 <footer>© 2025 JOGA WILL — Todos os direitos reservados</footer>
