--- a/CATEGORIAS/jogos-mobile.html
+++ b/CATEGORIAS/jogos-mobile.html
@@ -118,8 +118,10 @@ footer {
 </h1>
 
 <div class="container">
-    <!-- O AUTO-GERADOR INSERE AQUI -->
-    <div id="autogen-jogos-mobile" class="autogen-list"></div>
+
+    <!-- AUTO-GERADOR INJETA A LISTA AQUI -->
+    <div class="autogen-list" data-category="jogos-mobile"></div>
+
 </div>
 
 <!-- SCRIPT DO AUTOGEN -->
