--- a/CATEGORIAS/jogos-mobile.html
+++ b/CATEGORIAS/jogos-mobile.html
@@ -132,7 +132,7 @@ footer {
 <div id="jogos-mobile-list"></div>
 
 <!-- ATIVA O GERADOR AUTOMÁTICO -->
-<script type="module" src="/autogen/autogen.js"></script>
+<script type="module" src="../autogen/autogen.js"></script>
 
 <footer>© 2025 JOGA WILL — Todos os direitos reservados</footer>
 
